--- a/tdee.html
+++ b/tdee.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GYM</title>
-    <link rel="stylesheet" href="_css/bootstrap.css">
-    <script src="_js/bootstrap.bundle.js"></script>
-    <script src="tdee.js"></script>
+    <link rel="stylesheet" href="/_css/bootstrap.css">
+    <script src="/_js/bootstrap.bundle.js"></script>
+    <script src="/tdee.js"></script>
     <style>
         body {
             background-color: black;
