--- a/Appointment.html
+++ b/Appointment.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GYM</title>
-    <link rel="stylesheet" href="/_css/bootstrap.css">
-    <link rel="stylesheet" href="/animate.css">
-    <script src="/_js/bootstrap.bundle.js"></script>
-    <script src="/tdee.js"></script>
+    <link rel="stylesheet" href="./_css/bootstrap.css">
+    <link rel="stylesheet" href="./animate.css">
+    <script src="./_js/bootstrap.bundle.js"></script>
+    <script src="./tdee.js"></script>
     <style>
         body {
             background-color: black;
